gateway/multi-service-gateway/httproute.yaml
apiVersion: networking.x-k8s.io/v1alpha1
kind: HTTPRoute
metadata:
  name: foobar-route
  namespace: gateway-demo
spec:
  hosts:
  - hostnames: ["foo.com"]
    rules:
    - action:
        forwardTo:
        - targetRef:
            name: foo-svc
  - hostnames: ["bar.com"]
    rules:
    - action:
        forwardTo:
        - targetRef:
            name: bar-svc
  - rules:
    - action:
        forwardTo:
        - targetRef:
            name: default-backend
